@@ -1,154 +1,0 @@
-$NetBSD: distinfo,v 1.1 2018/10/23 23:01:33 maya Exp $
-
-SHA1 (ansi_term-0.11.0.crate) = 0c6f984f171ee890100780e038def5db2a8b7ab8
-RMD160 (ansi_term-0.11.0.crate) = 0bc10d826fc7a658ac1026dac333cc54f26f7c5b
-SHA512 (ansi_term-0.11.0.crate) = a637466a380748f939b3af090b8c0333f35581925bc03f4dda9b3f95d338836403cf5487ae3af9ff68f8245a837f8ab061aabe57a126a6a2c20f2e972c77d1fa
-Size (ansi_term-0.11.0.crate) = 17087 bytes
-SHA1 (atty-0.2.10.crate) = 64b2055a8f882487bfa5bb39a2a8ed21cc548b3c
-RMD160 (atty-0.2.10.crate) = a26723c8bf2dfea70f5f47d2f160d389a9710ae0
-SHA512 (atty-0.2.10.crate) = 76cbf960475073101d617bdaf12ed1e93dfdd96e22182674e1ec04c955fb1de2e3aa132345c50a1bebc579932d43c74c9aac64ae64107e98648a0f1f6562285b
-Size (atty-0.2.10.crate) = 5962 bytes
-SHA1 (bitflags-1.0.3.crate) = 3786cf7d6f348320680092347d5bb0ef79c49dd5
-RMD160 (bitflags-1.0.3.crate) = f64aa6bf708e5e7a943d40cdf59e852a3befee33
-SHA512 (bitflags-1.0.3.crate) = c1410967948a0c44c434bcf952c586166cea656f98532980156bce5eb68ea2966ad7457abd2e45e7444d346f47950aad9d6b4d6779486cddfbda70dee5716bd8
-Size (bitflags-1.0.3.crate) = 13838 bytes
-SHA1 (cbindgen-0.6.6.tar.gz) = 90c1d29ede3a464085bd0d1d8ca142095c4886b7
-RMD160 (cbindgen-0.6.6.tar.gz) = 28f583158a5f15d0271933f8443f723170ae805b
-SHA512 (cbindgen-0.6.6.tar.gz) = 7f49130b908900c4e271f946d9e0b9a5930bc9d8ac8cbff82d882dc1a9eef35104cc3c8cd794e36cdcc56ead9df278efd18963327778d3a45e6a51a24e452694
-Size (cbindgen-0.6.6.tar.gz) = 87879 bytes
-SHA1 (cfg-if-0.1.3.crate) = 667ceeb05de90570f9a83ba95dd8937b2ca92f01
-RMD160 (cfg-if-0.1.3.crate) = 95f39d854fe55b262013fd33ede063bb5343c181
-SHA512 (cfg-if-0.1.3.crate) = 88537e4b53f5553fdee16c4949de0bb0fdf12576b9a1d197fc7edd00d41c47972d481227bb6311bec774099cde27195fe319f28f4385a4091f06849dceabd34d
-Size (cfg-if-0.1.3.crate) = 7115 bytes
-SHA1 (clap-2.31.2.crate) = 7b766681226d5c45a696a362117acbc022deea65
-RMD160 (clap-2.31.2.crate) = 79fb60c0f24c2fba1fae1f74a42552247abe9b6d
-SHA512 (clap-2.31.2.crate) = f43c3e2736a7fcd5c59ba4c80bcdb28fe436b85fe33ef74a53b76b7aab009d9315d2be007a52c1abdee2f754b118ab8132640e6e6954fd60017a17d0cc086127
-Size (clap-2.31.2.crate) = 194051 bytes
-SHA1 (cloudabi-0.0.3.crate) = 3686cb2aa6c559198711acc8b0c7b0b1494d70b9
-RMD160 (cloudabi-0.0.3.crate) = 4da7ab080c1d18e5881dbcb419d250d0c38387eb
-SHA512 (cloudabi-0.0.3.crate) = 691ed793e9b35ba382f03897f4c0efc31a528394862a27b814ba8993ad30bbe0ebc9808484baf580e8b69d9c13ad1612776a1efd0f6981545b420139ff83592c
-Size (cloudabi-0.0.3.crate) = 22156 bytes
-SHA1 (dtoa-0.4.2.crate) = fce9f55515f12ee9495de986ac0acc4914fd2a89
-RMD160 (dtoa-0.4.2.crate) = 093085b43a09cd4c5e7f947126c2bcf7f9448366
-SHA512 (dtoa-0.4.2.crate) = a04410f8f67e846dbf3c72c0d15096e529c60174c6403931c9b8df67b41a59b8c06c675bc3222d0111f642d4153f7dd72c0631805d40386bded28695e38c7f0c
-Size (dtoa-0.4.2.crate) = 14227 bytes
-SHA1 (fuchsia-zircon-0.3.3.crate) = aed68761b67347c3ef3eda0059157def9eaaf7de
-RMD160 (fuchsia-zircon-0.3.3.crate) = 1c6ff549ecff64347e4b53dc8eb95d1444b78647
-SHA512 (fuchsia-zircon-0.3.3.crate) = a43ee59452d49742111e506d6bdd8b8399a3a646e08648e25292864d7f71460c1dd1f2d77b8efa8ed09ac21fa4ff0442a2709f16d8833a3849bde0c388d83a93
-Size (fuchsia-zircon-0.3.3.crate) = 22565 bytes
-SHA1 (fuchsia-zircon-sys-0.3.3.crate) = 03629e778d972e3bed82d31a2b7b66e0c63c05b5
-RMD160 (fuchsia-zircon-sys-0.3.3.crate) = 4b9e5d77223362e647972d7ccc66f69236aa1e89
-SHA512 (fuchsia-zircon-sys-0.3.3.crate) = 978b7e8795a5877a68409ed3a1d7b4246263f8e7e7ce9ba8a022643be98f58f329cc1c234717df80a509db849da4394f39e90a8e2a6f56f8fa8dd3c07e7d4386
-Size (fuchsia-zircon-sys-0.3.3.crate) = 7191 bytes
-SHA1 (itoa-0.4.1.crate) = 39d6e6f2788be31dc02c11c83e84f9892db6615c
-RMD160 (itoa-0.4.1.crate) = 7e5838fa55955b9d0333df524a287cd0b1f74e86
-SHA512 (itoa-0.4.1.crate) = f2efdad4fa250a1a453d3a956b478aebaa4cf0618f77da1f8206d3ef4e37b153a485de6a2873662acd0649fa9b8599cde8c99ed2096b7606166de90fb5ac77ee
-Size (itoa-0.4.1.crate) = 10563 bytes
-SHA1 (libc-0.2.41.crate) = 32e0b080278afda849764617f3f23dac0d257abc
-RMD160 (libc-0.2.41.crate) = a1560649de814c814424e67d61570150415a43b7
-SHA512 (libc-0.2.41.crate) = 6666f28673f765817dc6c989876a53031b117d281a6b148976b900ddeaa220fcb04c0e2bfe8b07d46f7e1b212e9c2fd7273b3300be548a3af0d2c9025bef7b26
-Size (libc-0.2.41.crate) = 333728 bytes
-SHA1 (log-0.4.1.crate) = cbfc4127dd3dce06de30beb8ee4a299db8296dd5
-RMD160 (log-0.4.1.crate) = 7f3f029ecc7321bf7105603f50094bdc5ff6820f
-SHA512 (log-0.4.1.crate) = a142f4d230cbe64a4efe2c46055722bf06e7af500c0f14d66f1d7d7fec99d552081ee9541d4a5b3aa5f46bc3be42f7702dff76132cc1eed7734234b2db37c0f0
-Size (log-0.4.1.crate) = 20731 bytes
-SHA1 (proc-macro2-0.3.8.crate) = cda2d8722cfd940c7ea4bb957d36ef7068f69c52
-RMD160 (proc-macro2-0.3.8.crate) = ac91272dd78b5d07f44d25153d381ff33555ad92
-SHA512 (proc-macro2-0.3.8.crate) = df6d48a5d9c2b7c3f071de3336343ac00c61427c74675512c457ce23d30879350fc995809154289fe9c2d08b7bc39a9137898f651bed8c3646695abfb8368a9d
-Size (proc-macro2-0.3.8.crate) = 24412 bytes
-SHA1 (proc-macro2-0.4.4.crate) = b83ee891bf21aed91819cda2ac99aa3382130d49
-RMD160 (proc-macro2-0.4.4.crate) = e2f985d1ecb85fb64cb30960f19f0f9c2d95be67
-SHA512 (proc-macro2-0.4.4.crate) = 13b74a69277bd7674554414039e79dd0ae14f6e998a46e6e587cc17b6f2c97a6dbcbc459c827888510e5aff3b79d48b11f840bc21a28ff16c0eee8a51b784a86
-Size (proc-macro2-0.4.4.crate) = 28564 bytes
-SHA1 (quote-0.5.2.crate) = 372d0e96176fd9e6e25d5c090075abf2ce680d8e
-RMD160 (quote-0.5.2.crate) = ce9f8617754b5b7335887d3a0fea383e7978437a
-SHA512 (quote-0.5.2.crate) = 66c0469bf1970164e87a4960791932ca06726c79bc522fe0bdfbd41ed23428e32448aa01a0f02066169c165364465eacbd19cdde47e96b4dba017a491842e6ac
-Size (quote-0.5.2.crate) = 14982 bytes
-SHA1 (quote-0.6.3.crate) = 053f11677d76379479422e5067b21ec711c8b79e
-RMD160 (quote-0.6.3.crate) = a42d7a42db7981f40504f1f21e0333e60f5d32fa
-SHA512 (quote-0.6.3.crate) = f2ff3cd617c69007c4f60961728c73a7ac7a2eaeb1d6da51218d2fbc9e85c06baeaccc9b82771a304bace04024479a192b88336546f96e17c6446ba85df94a10
-Size (quote-0.6.3.crate) = 14154 bytes
-SHA1 (rand-0.5.5.crate) = e19dccf087b45974147e8fe0c43c85b7472212c3
-RMD160 (rand-0.5.5.crate) = 09a484f5c5e3501d87ec80eb4be990fcb421b9a9
-SHA512 (rand-0.5.5.crate) = e135a9c97943662bcea9c4730f19ec6e01ea73303801101592c14e97b59adbbc3457ed7a3dd57843776f5febb6fa34890aad9d1c2c596ae89416e1a281062cc8
-Size (rand-0.5.5.crate) = 137359 bytes
-SHA1 (rand_core-0.2.1.crate) = 70e0d9dd1a78eff46047ee2fa15a27490489cef6
-RMD160 (rand_core-0.2.1.crate) = 6d34acd1c056b5ea5fa70f5c0e5d2292bb91931f
-SHA512 (rand_core-0.2.1.crate) = 5e919f4229ee2e7d00f47f8bbbb7fd27e11f34aa5bd85a9d9e34d45af1601bdbe2507d9b0182b5af7a6eb4d93da3004d2708729f7e864b6c66ce9b3274fe1c64
-Size (rand_core-0.2.1.crate) = 19262 bytes
-SHA1 (redox_syscall-0.1.40.crate) = acf4b4755c7ae29beba324ce0130e5de50fc1be2
-RMD160 (redox_syscall-0.1.40.crate) = f0d874ddc545a1c39c88648f71a5d08bb8a672df
-SHA512 (redox_syscall-0.1.40.crate) = 86e74bd8bd4fa12eb8d667cc91ab55df573c0a466c7786af76eefe70f7c294db5a307538089e2e3de2d0bbeee5c1691327020cd0eeacd9d6ab95048eea88b012
-Size (redox_syscall-0.1.40.crate) = 14745 bytes
-SHA1 (redox_termios-0.1.1.crate) = c077c0ef5380aa5b4054d0f403b1818a71e70bae
-RMD160 (redox_termios-0.1.1.crate) = 4403f32fb5435279446c9b6acc54792d655d4f72
-SHA512 (redox_termios-0.1.1.crate) = 201d051900e919e2c6c6769ef252e51979d90133df16b6605e2a2f424cfb2e6e505e21add75ef5854fe5e0cab1ed1f1c1451010f072ae4bc8703c585a4323981
-Size (redox_termios-0.1.1.crate) = 3227 bytes
-SHA1 (remove_dir_all-0.5.1.crate) = d92b006225b56e4df5d14d4428c915bc69e864d3
-RMD160 (remove_dir_all-0.5.1.crate) = 13b7dcf0ae8c4100d53134d45c32539b7a4debfb
-SHA512 (remove_dir_all-0.5.1.crate) = 9ee9a11717d45aebd28cd2f50719a2183cc623bdb1af099701e4edbdb9c98bc14cf2278ba06aca4658bfeddaffff00d0d1464c82d175fba7d6fb272918dd6928
-Size (remove_dir_all-0.5.1.crate) = 8726 bytes
-SHA1 (serde-1.0.64.crate) = fbf4541a320abacbb73efdb21d43b493d900ba45
-RMD160 (serde-1.0.64.crate) = 5acf57fd640bcc54ac61d92017f8aff0c66735f9
-SHA512 (serde-1.0.64.crate) = 6494787064f50a0c39b8d5328ea8ff961a97d7f0e4ab123b0a1e3fb43735f0dbd9721f60942c5797d9abfb9f2e79347345e0816d3783d8fb9138bb7d141abdb1
-Size (serde-1.0.64.crate) = 71347 bytes
-SHA1 (serde_derive-1.0.58.crate) = 1a25766efee4a0c8249e1ecfc0d5f2f0572b795c
-RMD160 (serde_derive-1.0.58.crate) = afa71153a3d412979b8f2c2b04d44b12a8fa9f5f
-SHA512 (serde_derive-1.0.58.crate) = 6eaa57861ede4b9bbc1e0bfc561917afaa133613c4279fddc17529c291f0fb1122e0443267de9498ddd4e45ca9d13e38d88aef00864b0505a05e06ca65bb8d80
-Size (serde_derive-1.0.58.crate) = 45146 bytes
-SHA1 (serde_json-1.0.19.crate) = fdd449b03a1c555a7ca69cfdfc442528bab90473
-RMD160 (serde_json-1.0.19.crate) = d2c91bd422770c7324b88539ca6202f701943234
-SHA512 (serde_json-1.0.19.crate) = 03b760d0bfd8a49499107a4b43bb9f588b375c92cb85fd131642bd787734a8523a176dc10330329a3ad8c6d575c917a813fc513a4fb5890c11ade0d48c046165
-Size (serde_json-1.0.19.crate) = 65039 bytes
-SHA1 (strsim-0.7.0.crate) = 4cf1b45a817297904edb358a1a2ec14d32361ac6
-RMD160 (strsim-0.7.0.crate) = 82c766cebe88a39e3058a21c730b43b3bf6e929d
-SHA512 (strsim-0.7.0.crate) = 3f92df0f444129b16fbb15c533b7bc1d6f18970b487b57345f74747fb7f41e3dc0cb61255712e94d419a5777b8f6a9cdf1a716718698c479eb98dfb6464d1983
-Size (strsim-0.7.0.crate) = 8435 bytes
-SHA1 (syn-0.13.11.crate) = bdaa830eb9d24140cd8869f379eb1c17e7de4782
-RMD160 (syn-0.13.11.crate) = 4f2fdb04d2726d92527f8fae365a88c6f0fce042
-SHA512 (syn-0.13.11.crate) = e14192e7bdc91d5bffbfc1e7091a46c340b4f5a9a6336b9cc12c78c328f9feaa432b4261346431fac1b5a11f93e122f1e902f1fae0927f9df6b5294e0abc3fa5
-Size (syn-0.13.11.crate) = 134240 bytes
-SHA1 (syn-0.14.1.crate) = 7a63ef692c6d653a65a9353ad3048a4e9353767a
-RMD160 (syn-0.14.1.crate) = 1dd79b2885e5625ce10e1852104ee2eb8fe58ec8
-SHA512 (syn-0.14.1.crate) = 408c785e6c6f7f63134a22c383f54ed8ab45d0521e1ddaba9204b21d1e0e56242e153377bd3ff67467816d581c91ecf663cbb814b1d6549a961e01f20b331482
-Size (syn-0.14.1.crate) = 133459 bytes
-SHA1 (tempfile-3.0.3.crate) = cc0f787bd7ad32daab9e4ad94383cf1645c91842
-RMD160 (tempfile-3.0.3.crate) = 41c6c17027dd05057bf21fa99f8e441cbe5b123d
-SHA512 (tempfile-3.0.3.crate) = 2bcc90ba3eed8a830b33de169419e222c16f9e0209734cdcf919422fdb504b29fc75f30dff7243bf19eb81cca12c80c94b80a622be8bac7b847242a58595873a
-Size (tempfile-3.0.3.crate) = 20806 bytes
-SHA1 (termion-1.5.1.crate) = 04157e26c3ad9efa87401d7872a103ee791e284c
-RMD160 (termion-1.5.1.crate) = 1dd6b33cc0518b95da88648441807c210a2a498f
-SHA512 (termion-1.5.1.crate) = 1d1536f08600c7c1f414b4579a1a6e7eff91f4c105504125118d3cadf71c7886a352d1c5f7e07f3d7c28aa8b4752f07b51eddb4d9adc6a9286f7b6bade2bec76
-Size (termion-1.5.1.crate) = 20659 bytes
-SHA1 (textwrap-0.9.0.crate) = 57b8298306ff75807cef72bc045830e101e78787
-RMD160 (textwrap-0.9.0.crate) = a530153540ed92b8038ac3bfb4e65fe588447cd9
-SHA512 (textwrap-0.9.0.crate) = e176f703f971eefb5cfc1ecf9047858bd7610a58fa4103879fd963b292c79872bd8466ef8fc9742a428ac707400dade307e72fa965dc4d61da66e932e5b20c35
-Size (textwrap-0.9.0.crate) = 15795 bytes
-SHA1 (toml-0.4.6.crate) = d11d3380e8e316f769267dd4830681045cfd5ef5
-RMD160 (toml-0.4.6.crate) = eb5ab69766b073a7744773779660d41854bd2e92
-SHA512 (toml-0.4.6.crate) = 659a243957649c987a509ad3b410d37ff7b16fb8e0ca5a1de183ea017e5dd63b88dd2f9770f386b739486bea28250c9853020d29b194994a7c22c5b78490ae95
-Size (toml-0.4.6.crate) = 40203 bytes
-SHA1 (unicode-width-0.1.5.crate) = 82af5ff3b480cb5a3870da5e3b4762c3d6b7b888
-RMD160 (unicode-width-0.1.5.crate) = 360df9e831a6e20931c240d13747f3711dc568d9
-SHA512 (unicode-width-0.1.5.crate) = bd5ac5f0433953d79408074239edc7c43ce23d56659d467805d81ab01c576a3cf77ccedb3bba41d48bc4ad46a8905ac8a1927b99312053ef6295fd940a6766d2
-Size (unicode-width-0.1.5.crate) = 15761 bytes
-SHA1 (unicode-xid-0.1.0.crate) = 69f5cec3b7a1d1e62b522c4dec7a56a7f4c3aa0c
-RMD160 (unicode-xid-0.1.0.crate) = fc5a8141e55bf6e2660b8c588e1107f179d24bb8
-SHA512 (unicode-xid-0.1.0.crate) = cc5343e2166938322cfd7c73f1f918f2a9c46846ac0ef55933d1e44cdfaf6f7da2b7ff18b68e356c47b6d8ba5565eda0db42c347dcbde830683f341ac2b1849d
-Size (unicode-xid-0.1.0.crate) = 16000 bytes
-SHA1 (vec_map-0.8.1.crate) = 62fd3b709e0efbb9d984d8541d811deff5930e23
-RMD160 (vec_map-0.8.1.crate) = 60ade9d4a361db970dd5a27786e5de3b491a4b62
-SHA512 (vec_map-0.8.1.crate) = 026cf10dc7ba98ae51dd312fc847cbaea41c25f0da5db6e0e22c2ecf75584bbf876d7bd96035fbbcf6696d702d5a3f25977e02a2d77cf519aa21e3ed05710e40
-Size (vec_map-0.8.1.crate) = 14959 bytes
-SHA1 (winapi-0.3.4.crate) = 3513c546a732d8feb851358742669b972808fad4
-RMD160 (winapi-0.3.4.crate) = ccf5ba89fc27ec1d28848c74ee3a5f1716f34d65
-SHA512 (winapi-0.3.4.crate) = 4636ceea813181de46c0bb2f837982936a69376e2b3a58d541a982a494ab4e5b52f3baf820f714a81a2e742def2bf07a2d8313e31b45e51dc7e4d350a5b24579
-Size (winapi-0.3.4.crate) = 905247 bytes
-SHA1 (winapi-i686-pc-windows-gnu-0.4.0.crate) = cf2bc857823de6008e6da350ad2c97c7be564322
-RMD160 (winapi-i686-pc-windows-gnu-0.4.0.crate) = a7d1e9e7f940d2e376a1b6dede7f0a50ad191ab8
-SHA512 (winapi-i686-pc-windows-gnu-0.4.0.crate) = a672ccefd0730a8166fef1d4e39f9034d9ae426a3f5e28d1f4169fa5c5790767693f281d890e7804773b34acdb0ae1febac33cde8c50c0044a5a6152c7209ec2
-Size (winapi-i686-pc-windows-gnu-0.4.0.crate) = 2918815 bytes
-SHA1 (winapi-x86_64-pc-windows-gnu-0.4.0.crate) = eadfdb146024d37b6887b5b9cb6a69f61473ed8a
-RMD160 (winapi-x86_64-pc-windows-gnu-0.4.0.crate) = 300417853d251d91cadb9650992a6aa98248619f
-SHA512 (winapi-x86_64-pc-windows-gnu-0.4.0.crate) = 4a654af6a5d649dc87e00497245096b35a2894ae66f155cb62389902c3b93ddcc5cf7d0d8b9dd97b291d2d80bc686af2298e80abef6ac69883f4a54e79712513
-Size (winapi-x86_64-pc-windows-gnu-0.4.0.crate) = 2947998 bytes
